0.4.0
Migrate to mapping io, use spotless
still need to work on inner class handling, need named jar inspection first